# NumericalFlowIteration

./: .gitignore  AUTHORS  INSTALL  Makefile.am  README  README_Moments  config.h  configure.ac  configure~  main.cpp  periodic_poisson_solver.h  poisson.cpp  poisson.h  poisson.hpp  test_cuda_kernel.cu  test_cuda_runner.cpp
AnjaMathematica/: C++CodeGenerator.nb  CalculateMoments_3333333  CalculateMoments_3333333.cpp  CalculateMoments_444444444  CalculateMoments_444444444.cpp  CalculateMoments_Full10  CalculateMoments_Full10.cpp  CalculateMoments_Full2  CalculateMoments_Full2.cpp  CalculateMoments_OnlyEvenN10  CalculateMoments_OnlyEvenN10.cpp  CoordinateShift_Example.nb  Test  TestCalculateMoments.cpp  TestMoments  TestPiInverse.cpp  Ypolynom_unrotated.mx  func.cpp  function.cpp  function.pyx  makefile.am  moments.hpp  plot.py  setup.py  test_def.hpp
AnjaMathematica/.deps/: CalculateMoments_3333333.Po  CalculateMoments_444444444.Po  CalculateMoments_Full10.Po  CalculateMoments_Full2.Po  CalculateMoments_OnlyEvenN10.Po
AnjaMathematica/CalculateMoments_generated/: CalculateMoments_3333333.cpp  CalculateMoments_444444444.cpp  NormFactor_unrotated.mx  makefile.am  moments.hpp
AnjaMathematica/CalculateMoments_generated/.deps/: CalculateMoments_3333333.Po  CalculateMoments_444444444.Po  CalculateMoments_Full10.Po  CalculateMoments_Full2.Po  CalculateMoments_OnlyEvenN10.Po
AnjaMathematica/CollisionKernel/: QmatrixPA4_unrotated.cpp  QmatrixPA8_unrotated.cpp  collideNmax8  collision.cpp  collisionKernel.README  header.h
AnjaMathematica/CollisionKernel/Smatrices/: SinitLandau21100AA  SinitLandau444444444AA  SmatrixLandau444444444AA
AnjaMathematica/CollisionKernel/initialFunctions/: finitBiGaussian3333333  finitBiGaussian444444444  finitBiGaussian_Full2
AnjaMathematica/CollisionKernel/preferenceFiles/: Landau_BiGaussian_3333333_lin  Landau_BiGaussian_full2
AnjaMathematica/Plots/: func.cpp  function.cpp  function.pyx  plot.py  setup.py
AnjaMathematica/Tests/: TestCalculateMoments.cpp  TestMoments  TestPiInverse.cpp  test_def.hpp
CollisionKernel/: QmatrixPA6_unrotated.cpp  collision.cpp  collisionKernel.README  main.cpp
CollisionKernel/Smatrices/: SmatrixLandau21100AA  SmatrixLandau21100AA.mx  SmatrixLandau3333333AA  SmatrixLandau3333333AA.mx  SmatrixLandau444444444AA.mx
CollisionKernel/preferenceFiles/: Landau_BiGaussian_444444444_lin
CollisionKernel/testResults/: Fout_1_Landau_BiGaussian_21100  Fout_1_Landau_BiGaussian_3333333  SoutLandau_BiGaussian_21100  SoutLandau_BiGaussian_3333333  SoutLandau_BiGaussian_444444444
dergeraet/: .cuda_kernel.hpp.swp  autoconfig.hpp.in  blas.cpp  blas.hpp  config.hpp  cuda_kernel.cu  cuda_kernel.hpp  cuda_runtime.hpp  cuda_scheduler.hpp  device_kernel.cpp  device_kernel.hpp  device_scheduler.hpp  electro_magnetic_force.cpp  electro_magnetic_force.hpp  fields.hpp  finite_difference_poisson.cpp  finite_difference_poisson.hpp  forces.cpp  forces.hpp  gmres.hpp  gmres.tpp  lapack.cpp  lapack.hpp  lsmr.hpp  lsmr.tpp  makefile.am  makefile.in  maxwell.cpp  maxwell.hpp  mpi.hpp  numerical_flow.hpp  periodic_poisson_solver.hpp  poisson.cpp  poisson.hpp  random.hpp  rho.hpp  splines.hpp  stopwatch.hpp
dergeraet/fortran_test/lib/: module_c_example.mod  module_f_example.mod
include/: openblas_config.h
m4/: m4_ax_check_cuda.m4
nufi/: autoconfig.hpp  autoconfig.hpp.in  autoconfig.hpp.in~  blas.cpp  blas.hpp  config.hpp  cuda_kernel.cu  cuda_kernel.hpp  cuda_runtime.hpp  cuda_scheduler.hpp  device_kernel.cpp  device_kernel.hpp  device_scheduler.hpp  fields.hpp  finite_difference_poisson.cpp  finite_difference_poisson.hpp  forces.cpp  forces.hpp  gmres.hpp  gmres.tpp  lapack.cpp  lapack.hpp  lsmr.hpp  lsmr.tpp  makefile.am  maxwell.cpp  maxwell.hpp  mpi.hpp  numerical_flow.hpp  poisson.cpp  poisson.hpp  random.hpp  rho.hpp  splines.cpp  splines.hpp  stopwatch.hpp
nufi/.deps/: blas.Po  cuda_kernel.Po  finite_difference_poisson.Po  forces.Po  lapack.Po  maxwell.Po  poisson.Po
test/: mpi_2d.sh
test/nonlinear_landau/: mpi_2d.sh
test/nonlinear_landau/comparison/: mpi_2d.sh
test/nonlinear_landau/comparison_256x1024/: mpi_2d.sh
test/nx=256_nv=2048/: mpi_2d.sh
test/nx=256_nv=2048/testy_runs/: mpi_2d.sh
(+2 files in other folders)
