AC_INIT([nufi],[0.1])
AC_CONFIG_MACRO_DIR([m4])

AM_INIT_AUTOMAKE([nostdinc dist-xz subdir-objects])
AM_SILENT_RULES([yes])
AM_PROG_AR

AC_LANG([C++])
AC_PROG_CC
AC_PROG_CXX
AC_OPENMP
AC_SUBST([AM_CXXFLAGS],["$OPENMP_CXXFLAGS"]) 
AX_CXX_COMPILE_STDCXX_17([noext],[mandatory])
AX_BLAS

AC_SUBST([AM_CPPFLAGS],['-I$(top_srcdir)'])

AC_CONFIG_HEADERS([nufi/autoconfig.hpp])
AC_CONFIG_FILES([Makefile])

LT_INIT
AC_OUTPUT

